add new auth method
